# small-websocket-prebuilt

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
client/: package-lock.json  package.json  vite.config.js
client/src/: customWebSocketTransport.ts  eventsWithSendPanel.tsx  hollycrmLogo.tsx  index.tsx  playgroundConsole.tsx  settingsEditor.tsx  websocketPipecatAppBase.tsx
small_websocket_prebuilt/: frontend.py
