[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "small-websocket-prebuilt"
version = "0.2.3"
description = "A simple, ready-to-use client for testing the WebSocket transport with Pipecat."
license = { text = "BSD 2-Clause License" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["websocket", "pipecat", "voice", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Communications",
  "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
  "fastapi[all]",
]

[dependency-groups]
dev = [
  "setuptools~=78.1.1",
  "build~=1.2.2",
]

[project.urls]
homepage = "https://github.com/Qiliang/small-websocket-prebuilt"
source = "https://github.com/Qiliang/small-websocket-prebuilt"
issues = "https://github.com/Qiliang/small-websocket-prebuilt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["small_websocket_prebuilt*"]

[tool.setuptools.package-data]
"small_websocket_prebuilt" = ["client/dist/**/*"]
